--- a/package.json
+++ b/package.json
@@ -10,8 +10,7 @@
   },
   "dependencies": {
     "pinia": "^2.0.14",
-    "vue": "^3.2.37",
-    "vue-demi": "^0.13.2"
+    "vue": "^3.2.37"
   },
   "devDependencies": {
     "@types/node": "^16.11.41",
